<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_1"
        android:layout_margin="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/cardview"
        android:textSize="12sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="11dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FF0808"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/error_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:passwordToggleEnabled="true"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:counterMaxLength="16"
        app:helperText=""
        app:counterEnabled="true"
        app:helperTextTextColor="#FF0808"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint=" Enter Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:background="@drawable/cardview"
            android:padding="14dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF0808"
            android:text="@string/remember_me"
            android:textColor="#000000"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="13dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <TextView
        android:id="@+id/checkbox_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="30dp"
        android:text=""
        android:textSize="12dp"
        android:textColor="#FF0808" />


    1<Button
    android:id="@+id/login_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="LOGIN"
    android:textColor="#ffffff"
    android:textStyle="bold"
    android:textSize="16dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:padding="20dp"
    android:background="@drawable/box"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000000"
            android:textSize="13dp"
            />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>