<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in_to_your_account"
            android:gravity="center"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/img_6" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_baseline_camera_alt_24" />


        </RelativeLayout>
        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:background="@drawable/cardview"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:padding="14dp"/>

        <TextView
            android:id="@+id/full_name_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textColor="#FF0808" />


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:background="@drawable/cardview"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:padding="14dp"/>


        <TextView
            android:id="@+id/user_name_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textColor="#FF0808" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:background="@drawable/cardview"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:padding="14dp"/>


        <TextView
            android:id="@+id/email_error_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textColor="#FF0808" />


        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:background="@drawable/cardview"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="10"
            android:padding="14dp"/>


        <TextView
            android:id="@+id/phone_no_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="4dp"
            android:text=""
            android:textColor="#FF0808" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:counterMaxLength="16"
            app:helperText=""
            app:counterEnabled="true"
            app:helperTextTextColor="#FF0808"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint=" Enter Password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:background="@drawable/cardview"
                android:padding="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Cerror_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:counterMaxLength="16"
            app:helperText=""
            app:counterEnabled="true"
            app:helperTextTextColor="#FF0808"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint=" Enter Confirm Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="16"
                android:background="@drawable/cardview"
                android:padding="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bioErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:counterMaxLength="200"
            app:counterEnabled="true"
            app:helperText=""
            app:helperTextTextColor="#ff0000"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bioEditText"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="15sp"
                android:hint=" Bio"
                android:maxLength="200"
                android:inputType="textCapWords|text|textMultiLine"
                android:background="@drawable/cardview"
                android:padding="15dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_media_link"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_2"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview1"
                    android:hint="Enter Twitter Link"
                    android:singleLine="true"
                    android:padding="21dp"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_3"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Facebook Link"
                    android:textSize="10sp"
                    android:singleLine="true"
                    android:background="@drawable/cardview1"
                    android:padding="21dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_4"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Instagram Link"
                    android:textSize="10sp"
                    android:singleLine="true"
                    android:background="@drawable/cardview1"
                    android:padding="21dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_5"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Youtube Link"
                    android:textSize="10sp"
                    android:singleLine="true"
                    android:background="@drawable/cardview1"
                    android:padding="21dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:buttonTint="#FF0808"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxtext"
                android:padding="10dp"
                android:textColor="#000000" />

        </LinearLayout>

        <TextView
            android:id="@+id/checkbox_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textSize="10dp"
            android:textColor="#FF0808" />


        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:background="@drawable/box"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#000000"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/login_bck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginback"
                android:textSize="14dp"
                android:textColor="#000000"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
    </LinearLayout>


</ScrollView>